Fix height of past-edition pictures on smaller screens

--- a/styles/style.css
+++ b/styles/style.css
@@ -671,6 +671,7 @@ input[type="submit"] {
 
 .past-editions-img-container {
   max-width: 800px;
+  min-height: 200px;
   margin-bottom: 80px;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: 1fr;
